--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,12 @@ node('jdk11-mvn3.8.5') {
         git 'https://github.com/Shri-1991/java11-examples.git'
     }
     stage('build') {
-        sh 'mvn clean package'
+        sh '''
+            echo "PATH=${PATH}"
+            echo "M2_HOME=${M2_HOME}
+        
+        '''
+        sh 'mvn clean package'    
     }
     stage('archive'){
         archive 'target/*.jar'
