--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ node('jdk11-mvn3.8.5') {
             echo "M2_HOME=${M2_HOME}
         
         '''
-        sh 'mvn clean package'    
+        sh 'mvn test'    
     }
     stage('archive'){
         archive 'target/*.jar'
